// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with policy POLICIES.RESET_PASSWORD passed in 1`] = `
<div
  id="expiredLink"
>
  <div>
    <div
      className="govuk-width-container"
    >
      <div
        className="govuk-breadcrumbs"
      >
        <ol
          className="govuk-breadcrumbs__list"
        >
          <li
            className="govuk-breadcrumbs__list-item"
          >
            <a
              className="govuk-breadcrumbs__link"
              href="https://nationalcareers.service.gov.uk/"
            >
              Home
            </a>
          </li>
        </ol>
      </div>
      <main
        className="govuk-main-wrapper"
      >
        <div
          className="govuk-grid-row"
        >
          <div
            className="govuk-grid-column-two-thirds"
          >
            <h1
              className="govuk-heading-xl govuk-!-margin-top-6 govuk-!-margin-bottom-9"
            >
              Expired link
            </h1>
            <div>
              <p
                className="govuk-body"
              >
                The link in your password reset email has expired.
              </p>
              <a
                className="govuk-button govuk-button--start"
                data-module="govuk-button"
                draggable="false"
                href={null}
                onClick={null}
                role="button"
              >
                Resend password reset email
              </a>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;

exports[`renders correctly without policy passed in 1`] = `
<div
  id="expiredLink"
>
  <div>
    <div
      className="govuk-width-container"
    >
      <div
        className="govuk-breadcrumbs"
      >
        <ol
          className="govuk-breadcrumbs__list"
        >
          <li
            className="govuk-breadcrumbs__list-item"
          >
            <a
              className="govuk-breadcrumbs__link"
              href="https://nationalcareers.service.gov.uk/"
            >
              Home
            </a>
          </li>
        </ol>
      </div>
      <main
        className="govuk-main-wrapper"
      >
        <div
          className="govuk-grid-row"
        >
          <div
            className="govuk-grid-column-two-thirds"
          >
            <h1
              className="govuk-heading-xl govuk-!-margin-top-6 govuk-!-margin-bottom-9"
            >
              Expired link
            </h1>
            <div>
              <p
                className="govuk-body"
              />
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;
